--- a/opm/templates/patientrecords/patientRecords.html
+++ b/opm/templates/patientrecords/patientRecords.html
@@ -1,4 +1,4 @@
-{% extends "home/patientHeaderFooter.html" %}
+{% extends "home/doctorHeaderFooter.html" %}
 {% load staticfiles%}
 
 {% block content %}
@@ -89,6 +89,9 @@
                     <center><b class="teal-text text-darken-2"><big><big>Medical Forms</big></big></b></center>
                     <br />
                     <table class="striped">
+                    {% if patient_medical_history_list.count == 0 %}
+                        <tr><th>No existing medical forms!</th></tr>
+                    {% else %}
                         {% for patient_medical_history in patient_medical_history_list.reverse %}
                             <tr>
                                 <th>{{ patient_medical_history.date|date:"F d, Y" }}</th>
@@ -96,23 +99,27 @@
 
                             </tr>
                         {% endfor %}
+                    {% endif %}
                     </table>
 
                 </div>
             </div>
-
             <div id="vitalRecords">
                 <div class="col s6" style="padding: 0px 30px 0px 30px">
                     <center><b class="teal-text text-darken-2"><big><big>Vital Records</big></big></b></center>
                     <br />
                     <table class="striped">
-                        {% for temperature_record in temperature_distinct_date_records %}
+                    {% if vitals_dates_list_size == 0 %}
+                        <tr><th>No existing vital records!</th></tr>
+                    {% else %}
+                        {% for vital_date in vitals_dates_list %}
                             <tr>
-                                <th>{{ temperature_record.timestamp|date:"F d, Y" }}</th>
-                                <td style="padding-right:3%;"><a href="{% url 'assignedpatientrecordsvitalrecords' patient.patientid temperature_record.timestamp|date:"Y-m-d" %}" class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
+                                <th>{{ vital_date|date:"F d, Y" }}</th>
+                                <td style="padding-right:3%;"><a href="{% url 'assignedpatientrecordsvitalrecords' patient.patientid vital_date|date:"Y-m-d" %}" class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
 
                             </tr>
                         {% endfor %}
+                    {% endif %}
                     </table>
 
                 </div>
