--- a/opm/templates/home/doctorHeaderFooter.html
+++ b/opm/templates/home/doctorHeaderFooter.html
@@ -33,7 +33,7 @@
 
                     <ul class="right hide-on-med-and-down" id="deets" style="">
                         <li><a href="{% url 'notifications' %}" class="black-text"><i class="material-icons left black-text">notification_important</i>Notifications</a></li>
-                        <li><a href="#" class="black-text"><i class="material-icons left black-text">account_circle</i>Manage Account</a></li>
+                        <li><a href="{% url 'managedoctoraccount' %}" class="black-text"><i class="material-icons left black-text">account_circle</i>Manage Account</a></li>
                         <li><a href="{% url 'index' %}" class="black-text"><i class="material-icons left black-text" >input</i>Log Out</a></li>
                     </ul>
                 </div>
@@ -41,7 +41,7 @@
 
             <ul class="sidenav" id="mobile-nav">
                 <li><a href="{% url 'notifications' %}" class="black-text"><i class="material-icons left black-text">notification_important</i>Notifications</a></li>
-                <li><a href="#" class="black-text"><i class="material-icons left black-text">account_circle</i>Manage Account</a></li>
+                <li><a href="{% url 'managedoctoraccount' %}" class="black-text"><i class="material-icons left black-text">account_circle</i>Manage Account</a></li>
                 <li><a href="{% url 'index' %}" class="black-text"><i class="material-icons left black-text" >input</i>Log Out</a></li>
             </ul>
         </div>
